--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,15 @@
 
 .pagination {
     margin: 0px auto;
-    width: 50%;
+    width: 36%;
 }
 
 .photo {
+    width:400px;
     height: 300px;
+    margin:0 auto;
+}
+.img{
+    width:100%;
+    height:100%;
 }
